# untitled_3d

./: .gitignore  CMakeLists.txt  OpenGL3DGameTutorial-ThinMatrix.sln  README.md  untitled_3d.sln
.ccls-cache/@@home@frosty@Programs@CXX@untitled_3d/: @include@c++@10.2.0@array.blob  @include@c++@10.2.0@backward@auto_ptr.h.blob  @include@c++@10.2.0@backward@binders.h.blob  @include@c++@10.2.0@bits@alloc_traits.h.blob  @include@c++@10.2.0@bits@allocated_ptr.h.blob  @include@c++@10.2.0@bits@allocator.h.blob  @include@c++@10.2.0@bits@atomic_base.h.blob  @include@c++@10.2.0@bits@atomic_lockfree_defines.h.blob  @include@c++@10.2.0@bits@basic_ios.h.blob  @include@c++@10.2.0@bits@basic_ios.tcc.blob  @include@c++@10.2.0@bits@basic_string.h.blob  @include@c++@10.2.0@bits@basic_string.tcc.blob  @include@c++@10.2.0@bits@char_traits.h.blob  @include@c++@10.2.0@bits@charconv.h.blob  @include@c++@10.2.0@bits@concept_check.h.blob  @include@c++@10.2.0@bits@cpp_type_traits.h.blob  @include@c++@10.2.0@bits@cxxabi_forced.h.blob  @include@c++@10.2.0@bits@cxxabi_init_exception.h.blob  @include@c++@10.2.0@bits@erase_if.h.blob  @include@c++@10.2.0@bits@exception.h.blob  @include@c++@10.2.0@bits@exception_defines.h.blob  @include@c++@10.2.0@bits@exception_ptr.h.blob  @include@c++@10.2.0@bits@functexcept.h.blob  @include@c++@10.2.0@bits@functional_hash.h.blob  @include@c++@10.2.0@bits@hash_bytes.h.blob  @include@c++@10.2.0@bits@int_limits.h.blob  @include@c++@10.2.0@bits@invoke.h.blob  @include@c++@10.2.0@bits@ios_base.h.blob  @include@c++@10.2.0@bits@istream.tcc.blob  @include@c++@10.2.0@bits@iterator_concepts.h.blob  @include@c++@10.2.0@bits@locale_classes.h.blob  @include@c++@10.2.0@bits@locale_classes.tcc.blob  @include@c++@10.2.0@bits@locale_facets.h.blob  @include@c++@10.2.0@bits@locale_facets.tcc.blob  @include@c++@10.2.0@bits@localefwd.h.blob  @include@c++@10.2.0@bits@memoryfwd.h.blob  @include@c++@10.2.0@bits@move.h.blob  @include@c++@10.2.0@bits@nested_exception.h.blob  @include@c++@10.2.0@bits@ostream.tcc.blob  @include@c++@10.2.0@bits@ostream_insert.h.blob  (+371 more)
.ccls-cache/@home@frosty@Programs@CXX@untitled_3d/: src@Engine@GameManager.cpp  src@Engine@GameManager.cpp.blob  src@Engine@GameManager.h  src@Engine@GameManager.h.blob  src@Entities@Camera.cpp  src@Entities@Camera.cpp.blob  src@Entities@Camera.h  src@Entities@Camera.h.blob  src@Entities@Entity.h  src@Entities@Entity.h.blob  src@Entities@FPSCamera.h  src@Entities@FPSCamera.h.blob  src@Entities@Light.h  src@Entities@Light.h.blob  src@Models@RawModel.h  src@Models@RawModel.h.blob  src@Models@TexturedModel.h  src@Models@TexturedModel.h.blob  src@RenderEngine@DisplayManager.cpp  src@RenderEngine@DisplayManager.cpp.blob  src@RenderEngine@DisplayManager.h  src@RenderEngine@DisplayManager.h.blob  src@RenderEngine@EntityRenderer.cpp  src@RenderEngine@EntityRenderer.cpp.blob  src@RenderEngine@EntityRenderer.h  src@RenderEngine@EntityRenderer.h.blob  src@RenderEngine@Loader.h  src@RenderEngine@Loader.h.blob  src@RenderEngine@MasterRenderer.cpp  src@RenderEngine@MasterRenderer.cpp.blob  src@RenderEngine@MasterRenderer.h.blob  src@RenderEngine@OBJLoader.cpp  src@RenderEngine@OBJLoader.cpp.blob  src@RenderEngine@OBJLoader.h  src@RenderEngine@OBJLoader.h.blob  src@RenderEngine@TerrainRenderer.cpp  src@RenderEngine@TerrainRenderer.cpp.blob  src@RenderEngine@TerrainRenderer.h.blob  src@RenderEngine@TextRenderer.cpp  src@RenderEngine@TextRenderer.cpp.blob  (+41 more)
OpenGL3DGameTutorial-ThinMatrix/: GameState.h  MenuItem.cpp  MenuItem.h  MenuState.cpp  MenuState.h  OpenGL3DGameTutorial-ThinMatrix.vcxproj  OpenGL3DGameTutorial-ThinMatrix.vcxproj.filters  RunState.cpp  RunState.h  StateManager.h  main.cpp
OpenGL3DGameTutorial-ThinMatrix/Engine/: GameManager.cpp  GameManager.h
OpenGL3DGameTutorial-ThinMatrix/Entities/: Camera.cpp  Entity.h  FPSCamera.cpp  FPSCamera.h
src/: CMakeLists.txt  main.cpp  untitled_3d.filters  untitled_3d.vcxproj  untitled_3d.vcxproj.filters
src/Components/: AABB.h  Camera.h  Collidable.h  ComponentManager.h  Physics.h  Renderable.h  Texture.h  Transform.h  UIElement.h
src/Engine/: GameManager.cpp  GameManager.h
src/Entities/: EntityManager.h  FPSCamera.cpp
src/Models/: #RawModel.h#
src/RenderEngine/: DisplayManager.cpp  Loader.cpp  Loader.h  MasterRenderer.h  OBJLoader.cpp  TextRenderer.h
src/Shaders/: Shader.h  TextShader.h
src/States/: GameState.h  MenuState.cpp  MenuState.h  RunState.cpp  RunState.h
src/System/: ChunkSystem.cpp  ChunkSystem.h  CollisionSystem.cpp  CollisionSystem.h  ControlSystem.cpp  ControlSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  System.h  SystemManager.h  UICollisionSystem.cpp  UICollisionSystem.h  UIRenderSystem.cpp  UIRenderSystem.h
src/Terrain/: Terrain.h
src/Toolbox/: BVH.cpp  BVH.h  BVHNode.h  ComponentArray.h  Coordinator.h  Maths.cpp  Maths.h  TypeDefinitions.h
(+21 files in other folders)
